style chat scrollbar and minor class modal fix

--- a/assets/css/classroom.scss
+++ b/assets/css/classroom.scss
@@ -11,7 +11,7 @@
   align-items: center;
   padding: 8px 1rem;
   // background-color: $secondary-text-dark;
-  background-color:var(--primary-background-color);
+  background-color: var(--primary-background-color);
   box-shadow: 0 6px 14px -2px rgba(0, 0, 0, 0.16);
   // border-radius: 3px;
   color: var(--primary-font-color);
@@ -91,6 +91,12 @@
 .online-student-info {
   display: flex;
   align-items: center;
+  margin-bottom: 8px;
+
+  img {
+    width: 40px;
+    height: 40px;
+  }
 }
 .communication-request-action-buttons svg {
   cursor: pointer;
@@ -128,8 +134,8 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 0;
-  background-color:var(--primary-background-color);
-  color:var(--primary-font-color);
+  background-color: var(--primary-background-color);
+  color: var(--primary-font-color);
   // background-color: white;
   position: relative;
 }
@@ -140,8 +146,6 @@
   height: 40px;
 }
 
-
-.stream-wrapper{
+.stream-wrapper {
   background-color: var(--primary-background-color);
-
 }
